// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the NoResults component matches the snapshot in the case of no orders 1`] = `
<div
  className="beArzs"
>
  <p>
    <span>
      Welcome to the downloads page
    </span>
  </p>
  <p>
    <span>
      It looks like you haven’t bought any products with downloadable files yet.
    </span>
  </p>
  <p>
    <span>
      Press the button below to visit yoast.com and look at our products.
    </span>
  </p>
  <button
    className="jJXxXH"
    onClick={[Function]}
    type="button"
  >
    <span>
      Shop
    </span>
  </button>
  <img
    alt=""
    className="bTHZQB"
    src="noSites.svg"
  />
</div>
`;

exports[`the NoResults component matches the snapshot in the case of no sites 1`] = `
<div
  className="beArzs"
>
  <p>
    <span>
      Welcome to the downloads page
    </span>
  </p>
  <p>
    <span>
      It looks like you haven’t bought any products with downloadable files yet.
    </span>
  </p>
  <p>
    <span>
      Press the button below to visit yoast.com and look at our products.
    </span>
  </p>
  <button
    className="kiBQfY"
    onClick={[Function]}
  >
    <span>
      Add site
    </span>
  </button>
  <img
    alt=""
    className="bTHZQB"
    src="noSites.svg"
  />
</div>
`;

exports[`the NoResults component matches the snapshot in the case of no subscriptions 1`] = `
<div
  className="beArzs"
>
  <p>
    <span>
      Welcome to the downloads page
    </span>
  </p>
  <p>
    <span>
      It looks like you haven’t bought any products with downloadable files yet.
    </span>
  </p>
  <p>
    <span>
      Press the button below to visit yoast.com and look at our products.
    </span>
  </p>
  <button
    className="jJXxXH"
    onClick={[Function]}
    type="button"
  >
    <span>
      Shop
    </span>
  </button>
  <img
    alt=""
    className="bTHZQB"
    src="noSites.svg"
  />
</div>
`;
